# chess

./: .gitignore  Chess.lean  PERFORMANCE.md  README.md  ROADMAP.md  THEORY.md  lake-manifest.json  lakefile.toml
Chess/: Attack.lean  AttackExamples.lean  Board.lean  FEN.lean  Game.lean  GameExamples.lean  Geometry.lean  Initial.lean  InteropExamples.lean  Move.lean  OpeningCorpus.lean  OpeningGraph.lean  PerftExamples.lean  Phase.lean  Piece.lean  Position.lean  RepetitionKey.lean  Replay.lean  Rules.lean  RulesExamples.lean  SAN.lean  SANExamples.lean  UCI.lean  Validate.lean  Validity.lean
benches/: board_ops.rs
data/: PROVENANCE.md  SHA256SUMS  moves.tsv  opening_pairs.tsv  perft.tsv  position_ids.tsv  traces.tsv
docs/: ARCHITECTURE.md  PLAYER_DATA.md
engine/: .gitignore  Cargo.toml  README.md  UPSTREAM.md
engine/benches/: board_ops.rs
engine/examples/: analyze.rs  nps.rs
engine/neural/: PLAN.md  RUNNING.md  launch_program.sh  run_gpu_program.sh  train_az.py  train_az_torch.py  warmstart_az.py
engine/src/: attacks.rs  bitboard.rs  board.rs  game.rs  lib.rs  magic.rs  movegen.rs  repetition.rs  san.rs  search.rs  types.rs  zobrist.rs  zobrist_table.rs
engine/src/eval/: pesto_tables.rs  policyvalue.rs
engine/tests/: legal_movegen.rs  monorepo_fixtures.rs  packed.rs  pgn.rs  repetition.rs  search.rs
engine/tests/data/: SOURCES.md  zobrist_polyglot.txt
logs/: STATUS
neural/: FINDINGS.md  GPU_PLAN.md  PLAN.md  RUNNING.md  eval_server.py  launch_program.sh  run_gpu_program.sh  sf_gauntlet.sh  train_az.py  train_az_torch.py  train_mlx.py  (+1 more)
(+86 files in other folders)
